--- a/src/app/main-pages/help/help.component.scss
+++ b/src/app/main-pages/help/help.component.scss
@@ -2,10 +2,9 @@
 @use "../../../styles/variables" as *;
 
 .help-content {
-  padding: 40px;
-  padding-left: 80px; 
-  height: calc(100vh - 80px);
-  overflow-y: auto;
+  padding: min(3%, 30px) min(3%, 80px);
+  height: calc(100vh - 96px);
+  overflow: visible;
   background-color: white;
   flex: 1; 
   min-width: 0;
